Cleanup: Remove redundant documentation, unused scripts, and temporary files
- Removed 19 redundant documentation files (troubleshooting guides, setup docs)
- Removed 10+ unused scripts (CSRF scripts, job creation scripts)
- Removed 5 unused YAML files
- Removed backup and temporary files
- Removed duplicate infra/ directory
- Added .gitignore to exclude Terraform provider binaries
- Kept all essential infrastructure, code, and scripts

--- a/.gitignore
+++ b/.gitignore
@@ -99,3 +99,17 @@ docs/_build/
 # PyBuilder
 target/
 
+# Terraform
+.terraform/
+.terraform.lock.hcl
+terraform.tfstate*
+*.tfplan
+
+# Temporary files
+*.tmp
+*.log
+urls.txt
+outputs.txt
+
+# OS files
+.DS_Store
